# bot_api

./: .dockerignore  .gitignore  DataManipulator.py  Docker-compose.yml  Dockerfile  README.md  botRetroactiveRead.py  old_requirements.txt  pyproject.toml  requirements.txt
src/: BotRetroactiveRead.py  DataManipulator.py  configuration.py  main.py
src/database/: models.py  schemas.py
